@@ -41,6 +41,7 @@ PostGIS 3.0.0
   - #4233, Fix undefined behaviour in gserialized_spgist_picksplit_nd (Raúl Marín)
   - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
   - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
+  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
 
 PostGIS 2.5.0
 2018/09/23
